Conexión con Bootstrap

--- a/index.html
+++ b/index.html
@@ -3,10 +3,24 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <!-- Meta description (70 a 320 caracteres) + Keywords + Open Graph (optional) + Author -->
+    <!-- title con 35 a 65 caracteres -->
     <title>Document</title>
+    <!--<link rel="shortcut icon" href="Assets/logo.svg">-->
+    <!--<link rel="stylesheet" href="css/styles.css">-->
+    <link rel="stylesheet" href="css/bootstrap.css">
 </head>
 <body>
-    
+    <header>
+        <!-- HTML5 del Header -->
+    </header>
+    <main>
+        <!-- HTML5 del Main -->
+    </main>
+    <footer>
+        <!-- HTML5 del Footer -->
+    </footer>
     <script src="Clase 1/main.js" ></script>
+    <script src="css/bootstrap.min.css"></script>
 </body>
 </html>
