--- a/facturacion.html
+++ b/facturacion.html
@@ -24,7 +24,7 @@
               <div class="collapse navbar-collapse" id="navbarNavDropdown">
                 <ul class="navbar-nav">
                   <li class="nav-item">
-                    <a class="nav-link active" href="index.html">Inicio</a>
+                    <a class="nav-link" href="index.html">Inicio</a>
                   </li>
                   <li class="nav-item">
                     <a class="nav-link" href="simulador.html">Simulador</a>
@@ -33,7 +33,7 @@
                     <a class="nav-link" href="clientes.html">Nuevo Cliente</a>
                   </li>
                   <li class="nav-item">
-                    <a class="nav-link" href="facturacion.html">Facturación</a>
+                    <a class="nav-link active" href="facturacion.html">Facturación</a>
                   </li>
                   <li class="nav-item">
                     <a class="nav-link" href="faq.html">FAQ</a>
