--- a/faq.html
+++ b/faq.html
@@ -24,7 +24,7 @@
               <div class="collapse navbar-collapse" id="navbarNavDropdown">
                 <ul class="navbar-nav">
                   <li class="nav-item">
-                    <a class="nav-link active" href="index.html">Inicio</a>
+                    <a class="nav-link" href="index.html">Inicio</a>
                   </li>
                   <li class="nav-item">
                     <a class="nav-link" href="simulador.html">Simulador</a>
@@ -36,7 +36,7 @@
                     <a class="nav-link" href="facturacion.html">Facturación</a>
                   </li>
                   <li class="nav-item">
-                    <a class="nav-link" href="faq.html">FAQ</a>
+                    <a class="nav-link active" href="faq.html">FAQ</a>
                   </li>
                   <li class="nav-item">
                     <a class="nav-link" href="soporte.html">Soporte</a>
