--- a/simulador.html
+++ b/simulador.html
@@ -24,10 +24,10 @@
               <div class="collapse navbar-collapse" id="navbarNavDropdown">
                 <ul class="navbar-nav">
                   <li class="nav-item">
-                    <a class="nav-link active" href="index.html">Inicio</a>
+                    <a class="nav-link" href="index.html">Inicio</a>
                   </li>
                   <li class="nav-item">
-                    <a class="nav-link" href="simulador.html">Simulador</a>
+                    <a class="nav-link active" href="simulador.html">Simulador</a>
                   </li>
                   <li class="nav-item">
                     <a class="nav-link" href="clientes.html">Nuevo Cliente</a>
